styles/globals.scss
@import 'theme.scss';
@import 'variables.scss';

html,
body {
  height: 100%;
  padding: 0;
  margin: 0;
}

body {
  background-color: var(--background);
  color: var(--text);
  animation: mte 1.5s 0s forwards ease-in-out;
  transition: background 0.39s cubic-bezier(0.17, 0.67, 0.83, 0.67),
    color 0.69s cubic-bezier(0.17, 0.67, 0.83, 0.67);
  font-family: 'Exo 2', sans-serif;
}

a {
  color: inherit;
  text-decoration: none;
}

main,
header,
footer {
  // h/t to josh - https://www.joshwcomeau.com/css/full-bleed/
  &.wrapper {
    display: grid;
    grid-template-columns:
      1fr
      min(calc($max-wrapper-size / 2), 50%)
      min(calc($max-wrapper-size / 2), 50%)
      1fr;

    & > .left {
      grid-column: 2;
    }
  }

  @media (max-width: $tablet-breakpoint) {
    padding: 0 var(--horizontal-padding);
  }
}

header,
footer {
  padding: var(--vertical-padding) var(--horizontal-padding);
  align-items: center;
}

main {
  // font-family: 'IBM Plex Sans', sans-serif;

  &.wrapper {
    & > * {
      grid-column: 2 / span 2;
    }

    & > .full-bleed {
      width: 100%;
      grid-column: 1 / 5;
    }
  }

  .image-wrapper {
    margin-bottom: 1.5ch;
  }

  h1,
  h2,
  h3,
  h4,
  h5,
  h6 {
    font-family: 'Exo 2', sans-serif;
  }

  p,
  li {
    font-size: 1rem;
    font-weight: 300;
    line-height: 1.68rem;
    margin: 0 0 0.5rem;
  }

  h1 {
    font-size: var(--h1-size);
  }

  h2 {
    font-size: var(--h2-size);
  }

  h3 {
    font-size: var(--h3-size);
    font-style: italic;
  }

  h4 {
    font-size: var(--h4-size);
  }

  h5 {
    font-size: var(--h5-size);
    font-style: italic;
  }

  h6 {
    font-size: var(--h6-size);
  }

  small,
  .text_small {
    font-size: 0.8em;
  }

  ol,
  ul {
    li {
      margin-bottom: 0.6rem;

      ol,
      ul {
        margin-top: 0.6rem;
      }

      span {
        margin-right: 0.5rem;
      }

      p {
        display: inline-block;
        margin: 0 0 0.6rem;
      }
    }
  }
}

header {
  .logo {
    width: 69px;
  }

  nav {
    display: flex;
    justify-content: flex-end;
    align-items: center;
    height: 100%;
    width: 100%;
    max-width: 1920px;
    margin: 0 auto;

    ul {
      list-style: none;
      display: flex;
      justify-content: space-between;
      user-select: none;
      margin: 0;
      padding: 0;

      li {
        display: inline-block;
        padding: 0;
        margin: 0 1rem 0 0;
      }
    }

    .dark-mode-toggle-container {
      button {
        color: var(--text-secondary);

        &:hover {
          color: var(--text);
        }

        &.MuiIconButton-root {
          padding: var(--header-icon-padding);
        }
      }
    }
  }
}

footer {
  a {
    &:not(:last-child) {
      margin-right: var(--horizontal-padding);
    }
  }
}

